2015-08-05
MultiRankSeq 1.2.5: Compatible with 3.2.1 version of R and related packages.

2015-07-24
MultiRankSeq 1.2.4: Improved the report. Parameter useAllInHeatmap was added.

2014-11-06
MultiRankSeq 1.2.3: Add required versions for DESeq2 and baySeq.

2014-11-05
MultiRankSeq 1.2.2: Improved to handle different versions of DESeq2 and baySeq.

2014-07-23
MultiRankSeq 1.2.1: More parameters can be used; Some bugs were fixed when most samples have zero count.

2014-03-25
MultiRankSeq 1.2.0: Improved documents; Some bugs were fixed.

2014-03-05
MultiRankSeq 1.1.5: Paired data was supported; sessionInfo was added into the report.

2014-02-27
MultiRankSeq 1.1.4: Some bugs were fixed.

2014-02-20
MultiRankSeq 1.1.3: Improved to DESeq2.

2014-02-05
MultiRankSeq 1.1.2: Improved based on the reviewer's comments.

2014-01-29
MultiRankSeq 1.1.1: Improved based on the reviewer's comments.

2013-10-14
MultiRankSeq 1.0.0: First version for paper.

2013-10-07
MultiRankSeq 0.1.2: Example data and example codes were added.

2013-10-05
MultiRankSeq 0.1.1: Help files were added.

2013-10-01
MultiRankSeq 0.1.0: First version for test.