@@ -1,10 +1,3 @@
-# Generated by roxygen2 (4.0.2): do not edit by hand
-
-export(MultiRankSeqReport)
 export(diffReport)
 export(findDiff)
-import(DESeq2)
-import(VennDiagram)
-import(baySeq)
-import(edgeR)
-import(knitr)
+export(MultiRankSeqReport)
