@@ -1,4 +1,3 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
 \docType{data}
 \name{exampleCounts}
 \alias{exampleCounts}
@@ -7,6 +6,8 @@
 exampleCounts
 }
 \description{
-This data set is a random counts data based on negative binomial distribution. The codes for generating this data can be found on the example of findDiff function.
+This data set is a random counts data based on negative
+binomial distribution. The codes for generating this data
+can be found on the example of findDiff function.
 }
 
