@@ -1,4 +1,3 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
 \docType{data}
 \name{exampleCountsDiff}
 \alias{exampleCountsDiff}
@@ -7,6 +6,9 @@
 exampleCountsDiff
 }
 \description{
-This data set is the results from DESeq, edgeR, baySeq packages, which is based on the exampleCounts data set. The codes for generating this data can be found on the example of findDiff function.
+This data set is the results from DESeq, edgeR, baySeq
+packages, which is based on the exampleCounts data set. The
+codes for generating this data can be found on the example
+of findDiff function.
 }
 
