@@ -1,3 +1,6 @@
+2016-04-19
+MultiRankSeq 1.2.6: Update due to the changes in baySeq package.
+
 2015-08-05
 MultiRankSeq 1.2.5: Compatible with 3.2.1 version of R and related packages.
 
